# luminiaeo-backend

./: .dockerignore  .env.example  .env.testing  .gitignore  DOCKER_SETUP.md  Dockerfile  Makefile  README.md  TECHNICAL_SYSTEM_FLOW.md  build.sh  clean_comments.php  composer.json  docker-compose.dev.yml  docker-compose.yml  docker-entrypoint.sh  dump.rdb  implementation.md  nginx.conf  package-lock.json  phpunit.xml  test_classifier_issue.py  test_pbn_endpoint.sh
base-python/: Dockerfile
bootstrap/: app.php  providers.php
config/: admin.php  api-cache.php  app.php  auth.php  billing.php  cache.php  cache_locks.php  citations.php  cors.php  database.php  horizon.php  logging.php  services.php
keyword-clustering-service/: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  prepare_dataset_for_training.py  prepare_training_data.py  requirements.txt  start_training.sh  train_chunked.py  train_model_complete.py  train_model_complete.py.backup
keyword-intent-service/: .dockerignore  .gitignore  Dockerfile  (+2 more)
pbn-detector/: ACCURACY_IMPROVEMENTS.md  ANALYSIS.md  Dockerfile  IMPROVEMENTS.md  README.md  pyproject.toml  requirements.txt  test_real_payload.py
pbn-detector/app/: config.py  main.py  schemas.py
pbn-detector/app/rules/: engine.py
pbn-detector/app/services/: adaptive_thresholds.py  classifier.py  content.py  enhanced_features.py  ensemble_classifier.py  feature_extractor.py  ipinfo.py  lightweight_classifier.py  whois.py
pbn-detector/app/utils/: cache.py
pbn-detector/scripts/: train_model.py
pbn-detector/tests/: test_detector.py
(+403 files in other folders)
