[tool.poetry]
name = "pbn-detector"
version = "0.1.0"
description = "PBN detection microservice"
authors = ["Luminiaeo Platform <dev@luminiaeo.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
httpx = "^0.27.0"
redis = "^5.0.1"
pydantic = "^2.6.4"
pydantic-settings = "^2.2.1"
scikit-learn = "^1.4.2"
numpy = "^1.26.4"
scipy = "^1.11.4"
datasketch = "^1.6.4"
loguru = "^0.7.2"
orjson = "^3.10.0"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-asyncio = "^0.23.6"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"

